fix overflow with grid-auto-row sizing

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -102,6 +102,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: minmax(200px, 1fr);
   gap: 10px;
 }
 
